--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 colorama==0.4.6
 comm==0.2.3
+contourpy==1.3.3
 curl_cffi==0.13.0
+cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
 executing==2.2.1
+fonttools==4.61.0
 frozendict==2.4.7
 idna==3.11
 ipykernel==7.1.0
@@ -17,6 +20,8 @@ ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+kiwisolver==1.4.9
+matplotlib==3.10.7
 matplotlib-inline==0.2.1
 multitasking==0.0.12
 nest-asyncio==1.6.0
@@ -25,6 +30,7 @@ packaging==25.0
 pandas==2.3.3
 parso==0.8.5
 peewee==3.18.3
+pillow==12.0.0
 platformdirs==4.5.0
 prompt_toolkit==3.0.52
 protobuf==6.33.1
@@ -32,6 +38,7 @@ psutil==7.1.3
 pure_eval==0.2.3
 pycparser==2.23
 Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
