--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,7 @@ urllib3==2.5.0
 wcwidth==0.2.14
 websockets==15.0.1
 yfinance==0.2.66
+patsy==1.0.2
+scipy==1.16.3
+statsmodels==0.14.5
+seaborn==0.13.2
